# Repository_Example

./: .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.yml  logging.yml
faiss_index/: index.faiss  index.pkl
logs/: my_app.log.jsonl
src/: main.py
src/lib/: config.py
src/lib/logging/: logging.py
src/similarity/: container.py  utils.py  views.py
src/similarity/adapters/: faiss_db.py  protocols.py  redis_db.py  redis_eventpublisher.py  redis_publisher.py  repositories.py  repository.py
src/similarity/domain/: commands.py  exceptions.py  knowledge_base_repository.py  models.py  repositories.py  types.py
src/similarity/entrypoints/: __init__.py  error.py  redis_consumer.py
src/similarity/entrypoints/graphql/: query.py  router.py  schema.py
src/similarity/entrypoints/restapi/: document.py  knowledge_base.py
src/similarity/services/: handlers.py  messagebus.py  unit_of_work.py
tests/: conftest.py  random_refs.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_message_broker.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_domain.py  test_handlers.py  test_utils.py
