[project]
name = "similarity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "amirbahador", email = "amirbahador.develop@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "redis>=5.0.2",
    "langchain>=0.1.10",
    "python-dotenv>=1.0.1",
    "memoization>=0.4.0",
    "omegaconf>=2.3.0",
    "uvicorn>=0.27.1",
    "dependency-injector>=4.41.0",
    "sentence-transformers>=2.5.1",
    "faiss-cpu>=1.8.0",
    "strawberry-graphql>=0.219.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.pdm.scripts]
start.cmd = "python src/main.py"
test.cmd = "python -m pytest --tb=short"
consume.cmd = "python src/main.py"
consume.env = {APP_ENV="consumer"}


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.1",
    "pytest-asyncio>=0.23.5",
]